kasten/k10-data-protection-by-label/.chainsaw-test/ss-bad-badlabel.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bad-ss02
  labels:
    purpose: production
    dataprotection: foo-bar
spec:
  selector:
    matchLabels:
      app: busybox
  serviceName: busybox-ss
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busybox
        image: busybox:1.35
