kasten/k10-data-protection-by-label/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k10-data-protection-by-label
status:
  ready: true
