kasten/k10-data-protection-by-label/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: k10-data-protection-by-label
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../k10-data-protection-by-label.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
    - assert:
        file: chainsaw-step-01-assert-2.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: deployment-good.yaml
    - apply:
        file: ss-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deployment-bad-badlabel.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deployment-bad-nolabel.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ss-bad-badlabel.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ss-bad-nolabel.yaml
  - name: step-98
    try:
    - script:
        content: kubectl delete deployments --all --force --grace-period=0 -n k10-dplabel-ns
    - script:
        content: kubectl delete statefulsets --all --force --grace-period=0 -n k10-dplabel-ns
    - script:
        content: kubectl delete pods --all --force --grace-period=0 -n k10-dplabel-ns
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: k10-data-protection-by-label
